Almost finished addressing comments from 2nd review

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -107,7 +107,9 @@
 
 \begin{abstract}
 
-With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets), has been developed by embedding the functionality of the MAESPA process-based tree model \citep{Duursma2012}, a model that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. This innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across urban canyons. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first evaluation compares modelled surface energy balance fluxes to observations in Preston, Australia \citep{Coutts2007}. The second evaluation compares spatial and temporal predictions of $T_{mrt}$ and UTCI to two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on conditions in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to deliver improvements in HTC and be used to generate best practice guidelines for urban greening in support of HTC.
+With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets) has been developed. In it, offline modelling of individual items of vegetation is performed using the MAESPA process-based tree model \citep{Duursma2012} (a model that can model individual trees, vegetation, and soil components), and integrated into the TUF-3D \citep{Krayenhoff2007} urban micro-climate surface energy balance model. This innovative approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across urban canyons. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first evaluation compares modelled surface energy balance fluxes to observations in Preston, Australia \citep{Coutts2007}. The second evaluation compares spatial and temporal predictions of $T_{mrt}$ and UTCI to two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment in support of HTC. 
+
+%Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on conditions in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to deliver improvements in HTC and be used to generate best practice guidelines for urban greening in support of HTC.
 
 
 \end{abstract}
@@ -264,7 +266,9 @@ Q_{E} = Q_{E,et} + Q_{E,soil} + Q_{E,canopy} + Q_{E,evap}
 \end{aligned}
 \end{equation}
 
-where each $Q_{E}$ value was previously converted in Equation (\ref{eq:mmtowm2}). With these additions, VTUF-3D is now able to account for $Q_{E}$ in energy balance partitioning, and thus determine the influence of water and vegetation evapotranspiration on temperature predictions in urban canyons.
+where each $Q_{E}$ value was previously converted in Equation (\ref{eq:mmtowm2}). For large trees (extending beyond the edges of the grid square), the $Q_{E}$ for the entire tree will be applied to grid square where the trunk is located.
+
+With these additions, VTUF-3D is now able to account for $Q_{E}$ in energy balance partitioning, and thus determine the influence of water and vegetation evapotranspiration on temperature predictions in urban canyons.
 
 
 \subsubsection{Sensible heat and ground storage fluxes}\label{sec:convection} 
@@ -375,7 +379,7 @@ In order to understand the changes made to create VTUF-3D, an brief overview of 
    \subfloat[VTUF-3D reverse ray tracing.]{
    \includegraphics[trim=110mm 211mm 621mm 210mm, clip, scale=0.15]{images/VTUF-Design-5.png}
    }
-   \caption{(a) Initial view angles ray tracing, run during model initialisation to determine which surfaces are visible to each other. Trees depicted with dashed borders to emphasise they are present in the domain but are not considered at this point in the simulation. \label{fig:initray} (b) TUF-3D unmodified shading logic in which each surface performs four ray traces (from each surface quarter) towards the sun and determines sunlit percentage based on how many rays leave the domain without meeting an obstruction. Vegetation modelling is not possible in TUF-3D, so is not depicted. \label{fig:shading} (c) VTUF-3D modified shading, timestep ray tracing, using the same process as the unmodified logic but setting a flag for any ray that encounters vegetation. \label{fig:modshading} (d) VTUF-3D modified shading, reverse ray tracing. For any rays that encounter vegetation in forward ray tracing, reverse ray traces are performed to allocate radiation to intervening encountered surfaces. \label{fig:modshadingreverse}} 
+   \caption{(a) Initial view angles ray tracing, run during model initialisation to determine which surfaces are visible to each other. Trees depicted with dashed borders to emphasise they are present in the domain but are not considered at this point in the simulation. \label{fig:initray} (b) TUF-3D unmodified shading logic in which each surface performs four ray traces (from each surface quarter) upwards towards the sun and determines sunlit percentage based on how many rays leave the domain without meeting an obstruction. Vegetation modelling is not possible in TUF-3D, so is not depicted. \label{fig:shading} (c) VTUF-3D modified shading, timestep ray tracing, using the same process as the unmodified logic but setting a flag for any ray that encounters vegetation. \label{fig:modshading} (d) VTUF-3D modified shading, downward ray tracing. For any rays that encounter vegetation during upward ray tracing, additional ray traces are performed in reverse (downward) to allocate radiation to intervening encountered surfaces. \label{fig:modshadingreverse}} 
 \end{figure}
 
 
@@ -387,9 +391,9 @@ The domain initialisation ray tracing routines of TUF-3D have not been modified.
 
 After model improvements to VTUF-3D were made, a similar parallel logic was created to represent the vegetation in the domain. These vegetation elements are ignored in the initial ray-tracing (Figure \ref{fig:initray}a). This initial ray tracing is performed to optimise the modelling, to exclude any two surfaces which will never be visible to each other. However, depending on the density of the vegetation, the pathway between two surfaces might not be completely obscured by vegetation, so these cases will have to be evaluated during the simulation run.
 
-At each timestep during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}c). During the model iteration through each surface in the domain, ray-traces towards the sun are performed as described previously (the TUF-3D default method). However, each step of the ray trace checks to see if vegetation has been encountered, and if encountered sets a flag to indicate further processing will be needed. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. If no vegetation is encountered, radiation exchanges between surfaces along the ray default to the original TUF-3D method. Otherwise additional processing needs to be done to account for the radiation exchanges affected by vegetation.
+At each timestep during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}c). During the model iteration through each surface in the domain, upward ray-traces towards the sun are performed as described previously (the TUF-3D default method). However, each step of the ray trace checks to see if vegetation has been encountered, and if encountered sets a flag to indicate further processing will be needed. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. If no vegetation is encountered, radiation exchanges between surfaces along the ray default to the original TUF-3D method. Otherwise additional processing needs to be done to account for the radiation exchanges affected by vegetation.
 
-To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, reverse ray tracing is done for those beams (Figure \ref{fig:modshadingreverse}d). For surfaces 5 and 6 in Figure \ref{fig:modshadingreverse}d, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation. The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the final ground or building surface.
+To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, ray tracing is performed in reverse (downward) for those beams (Figure \ref{fig:modshadingreverse}d). For surfaces 5 and 6 in Figure \ref{fig:modshadingreverse}d, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation. The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the final ground or building surface.
 
 Each item of vegetation in the domain is modelled offline and these data are made available for the main simulation run. In order to account for the effects of inter-tree shading or shading by buildings during the main simulation run, these offline vegetation calculations are run twice using varied amounts of incoming shortwave. The first variation uses 100\% incoming solar radiation to account for when the vegetation is in full sun. The second variation uses only the diffuse component of the incoming solar radiation for when the vegetation is shaded by obstructions. The proper variation for each item of vegetation is chosen programmatically (based on its current sunlit percentage) during the model run. As the illumination levels vary in each location in an urban canyon across the diurnal cycle, these variations allow the differing vegetation responses (varying levels of photosynthesis due to lower levels of PAR, changes in surface temperatures, and varying vegetation evapotranspiration due to differences in stomatal conductance and vapour pressure deficits) to be captured. However, these variations will not be able to exactly capture every variation, such as a reduction in diffuse shortwave due to a nearby building. Examples of the forcing data required for these offline variations are described in the Pr04Val evaluation set-up (Section \ref{sec:modelsetup}).
 
@@ -535,13 +539,14 @@ Using the RMSE and MBE values for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$ from Phase 4 
  \begin{center}
  \begin{table}[!htbp]
  \caption{RMSE (W m$^{-2}$) and MBE (W m$^{-2}$) statistics VTUF-3D vs. Intercomparison \citep{Best2012} comparison for Preston evaluation scenarios for 10 February-10 March 2004.\label{fig:prestonrmse}} 
- \begin{tabular}{  | l | l | l|l|l|l|l|l|l|l|l| } 
- \hline \textbf{Scenario name}& &\textbf{$Q^{*}$}& \textbf{$Q_{H}$}& \textbf{$Q_{G}$}& \textbf{$Q_{E}$} & &\textbf{$Q^{*}$}& \textbf{$Q_{H}$}& \textbf{$Q_{G}$}& \textbf{$Q_{E}$}  \\ \hline
- Pr04Val& RMSE & 19.0&	40.2&	52.5&	33.1    & MBE & 3.0&	-4.0&	-8.3&	-9.5    \\ \hline
- Pr04NoVeg& RMSE & 51.6&	87.0&	75.9&	47.1  & MBE & 41.1&	-6.3&	11.0&	23.8  \\ \hline
- IntercomparisonNoVeg& RMSE & 40&	105&	85&	38   & MBE & 2&	45&	-16& -32   \\ \hline
- IntercomparisonTiled& RMSE &  27&	60&	77&	25 & MBE & -7&	13&	-22& -1  \\ \hline
- IntercomparisonIntegrated& RMSE & 25&	45&	77&	26   & MBE & -5&	13&	-18& -3   \\ \hline
+ \begin{tabular}{  |  l|l|l|l|l|l|l|l|l| } 
+  \hline  \textbf{Scenario name} &  \multicolumn{4}{c|}{\textbf{RMSE}} & \multicolumn{4}{c|}{\textbf{MBE}}  \\ 
+& \textbf{$Q^{*}$}& \textbf{$Q_{H}$}& \textbf{$Q_{G}$}& \textbf{$Q_{E}$} & \textbf{$Q^{*}$}& \textbf{$Q_{H}$}& \textbf{$Q_{G}$}& \textbf{$Q_{E}$}  \\ \hline 
+ Pr04Val&  19.0&	40.2&	52.5&	33.1    &  3.0&	-4.0&	-8.3&	-9.5    \\ \hline
+ Pr04NoVeg&  51.6&	87.0&	75.9&	47.1  &  41.1&	-6.3&	11.0&	23.8  \\ \hline
+ IntercomparisonNoVeg&  40&	105&	85&	38   &  2&	45&	-16& -32   \\ \hline
+ IntercomparisonTiled&   27&	60&	77&	25 &  -7&	13&	-22& -1  \\ \hline
+ IntercomparisonIntegrated&  25&	45&	77&	26   &  -5&	13&	-18& -3   \\ \hline
    \end{tabular} 
  \end{table}
  \end{center} 
@@ -573,7 +578,7 @@ This set of evaluations was undertaken using observations from George St. and Gi
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.74]{{images/CoMGippsGeorgeStArea3.png}}
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.78]{{images/Gipp200x200_5mgrid_heights2.png}}
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.33]{{images/GeorgeSt-100x100m-5m_grid_heights2.png}}~
-\caption{Overview of observed City of Melbourne locations: Gipps St. (OPN), outlined in green, and George St. (TRD), outlined in red. Gipps St./George St. - Modelled domains with 3 and 4 observation stations located on street, gridded at 5m resolution. Adapted from \cite{GooglePreston2015}.
+\caption{Overview of observed City of Melbourne locations: Gipps St. (OPN), outlined in red, and George St. (TRD), outlined in green. Gipps St./George St. - Modelled domains with 3 and 4 observation stations located on street, gridded at 5m resolution (numbers showing building/vegetation heights in 5m multiples). Adapted from \cite{GooglePreston2015}.
 \label{fig:GeorgeGippsSt2}  \label{fig:GeorgeGippsSt} 
 } 
 \end{figure}
@@ -646,26 +651,25 @@ Modelled predictions for the George St. observation locations (TRD\_2, TRD\_3, T
 \begin{center}
 \begin{table}
 \caption{George St. GeorgeValidation and Gipps St. GippsValidation scenarios $T_{mrt}$ and UTCI predicted vs. observations statistical performance of RMSE (\SI{}{\degreeCelsius}), MBE (\SI{}{\degreeCelsius}), MAE (\SI{}{\degreeCelsius}), and d index of agreement.\label{tab:georgetmrt}}
-  \begin{tabular}{ |c|c | c |c |c  | c | c | c| c | c|c|} 
-	\hline \textbf{Observation point} 
-	&\textbf{} 
+  \begin{tabular}{ |c|c | c |c |c  | c | c |  c|c|}   
+  \hline    &  \multicolumn{4}{c|}{\textbf{$T_{mrt}$}} & \multicolumn{4}{c|}{\textbf{UTCI}}  \\  
+  \textbf{Observation point} 
 	& \textbf{RMSE} 
 	& \textbf{MBE} 
 	& \textbf{MAE} 
 	& \textbf{d} 
-	&\textbf{} 
 	& \textbf{RMSE} 
 	& \textbf{MBE} 
 	& \textbf{MAE}
 	& \textbf{d}	
 	\\ \hline
-TRD\_2 &{$T_{mrt}$}   & 5.48 & -2.59 & 3.88 & 0.938 & {UTCI}	 & 3.02 & -2.58 & 2.72 & 0.931  \\ \hline
-TRD\_3 &{$T_{mrt}$}  & 6.46 & 0.24 & 3.58 & 0.925& {UTCI}  & 2.74 & -1.65 & 2.38 & 0.947  \\ \hline
-TRD\_4 &{$T_{mrt}$}  & 7.94 & -4.29 & 5.05 & 0.913& {UTCI}  & 3.64 & -2.93 & 3.03 & 0.914  \\ \hline
-TRD\_5 &{$T_{mrt}$}  & 6.74 & 1.30  & 4.28& 0.939& {UTCI}  & 2.75 & -1.58 & 2.41 & 0.953  \\ \hline
-OPN\_3 &{$T_{mrt}$}  & 6.01 & -0.28 & 3.90 & 0.959& {UTCI}  & 2.33 & -0.98 & 1.80 & 0.971   \\ \hline
-OPN\_4 &{$T_{mrt}$}  & 6.11 & -0.99 & 3.84 & 0.959& {UTCI}  & 2.44 & -1.09 & 1.98 & 0.967   \\ \hline
-OPN\_5 &{$T_{mrt}$}  & 5.82 & -1.12 & 3.52 & 0.961& {UTCI}  & 2.45 & -1.15 & 2.01 & 0.965  \\ \hline
+TRD\_2 & 5.48 & -2.59 & 3.88 & 0.938 	 & 3.02 & -2.58 & 2.72 & 0.931  \\ \hline
+TRD\_3 & 6.46 & 0.24 & 3.58 & 0.925  & 2.74 & -1.65 & 2.38 & 0.947  \\ \hline
+TRD\_4 & 7.94 & -4.29 & 5.05 & 0.913  & 3.64 & -2.93 & 3.03 & 0.914  \\ \hline
+TRD\_5 & 6.74 & 1.30  & 4.28& 0.939  & 2.75 & -1.58 & 2.41 & 0.953  \\ \hline
+OPN\_3 & 6.01 & -0.28 & 3.90 & 0.959  & 2.33 & -0.98 & 1.80 & 0.971   \\ \hline
+OPN\_4 & 6.11 & -0.99 & 3.84 & 0.959  & 2.44 & -1.09 & 1.98 & 0.967   \\ \hline
+OPN\_5 & 5.82 & -1.12 & 3.52 & 0.961  & 2.45 & -1.15 & 2.01 & 0.965  \\ \hline
   \end{tabular} 
 \end{table}
 \end{center} 
@@ -682,9 +686,11 @@ The modelled results of $T_{mrt}$ for Gipps St., a clear open street with few ob
 
 There are a number of differences in the way $T_{g}$ (and its use in calculating $T_{mrt}$) (see Section \ref{sec:tmrtutci} and Eq. \ref{eq:tg2}) is calculated compared to the observed values that could explain some of the differences. The modelled results are calculated for each surface in the domain (and only for surfaces in the domain). As there are no surfaces at the locations at which the observations were taken (3.5 to 4m above the ground), the comparisons of $T_{mrt}$ needed to be performed on the modelled results at a 0m height underneath the observation locations. These modelled ground surfaces will have received reduced amounts of $K\downarrow$ due to a reduced sky view factor and shading effects, especially in the mornings when much of the canyon floor will be in shadow due to lower sun angles.
 
-Modelled results of $T_{mrt}$ and UTCI in George St. the treed canyon, follow similar patterns to Gipps St. The observations show wide variations between the observation locations due to the intermittent shading effect through a denser canopy as the sun moves across the sky. The modelled results also show wide variations between the locations but do not reproduce as wide a range as the observations. Additionally, differences can be seen in timing of periods of shading and illumination compared to the observations. In this, some limitations are seen in the scenarios' resolutions, of 5m, as small differences in timing can lead to large differences in the comparisons. However, even at this relatively coarse resolution, VTUF-3D is still able to produce good results within a complex canopy. 
+Modelled results of $T_{mrt}$ and UTCI in George St. the treed canyon, follow similar patterns to Gipps St. The observations show wide variations between the observation locations due to the intermittent shading effect through a denser canopy as the sun moves across the sky. The modelled results also show wide variations between the locations but do not reproduce as wide a range as the observations. Additionally, differences can be seen in timing of periods of shading and illumination compared to the observations. 
 
-These conclusions are further supported by the statistical analysis of predicted vs. observed results in Table \ref{tab:georgetmrt}. Performance of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon (George St.) show good agreement, with even stronger agreement in the open Gipps St. canyon. In the other statistics (RMSE, MBE, and MAE), the results in the treed canyon show good agreement with even stronger agreement in the open canyon.
+A statistical analysis of predicted vs. observed results is presented in Table \ref{tab:georgetmrt}. Results of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon (George St.) show values of 0.91 to 0.93 while the open Gipps St. canyon shows superior performance in the range of 0.95 and 0.96 for $T_{mrt}$ and 0.95 to 0.97 for UTCI. Other statistics (RMSE, MBE, and MAE) also show this pattern of good performance within the open canyon compared to reduced performance in the treed canyon.
+
+These wider divergences of modelled results from observed values within the treed canyon suggests a number of possible limitations of this study and of the VTUF-3D model. The first is of the evaluation process. High quality, high resolution observations of $T_{mrt}$ and UTCI in urban areas, particularly underneath a dense canopy, are difficult to make, and very few datasets are widely available for model evaluations. The small number of observed locations available within this evaluation led to difficulty in matching the precise position of the observation sensors (and the precise amounts of rapidly fluctuating illumination on the black globe sensors) to the more detailed resolution of the modelled results. The divergences also suggest some limitations of VTUF-3D when modelling dense vegetation. This can result from the challenges of designing an exact detailed representation of the observed area within the modelled domain using a 5m resolution, as small differences in timing can lead to large differences in the comparisons.. It also suggests further work is needed to improve the physical representation of the vegetated canopy in the next version of VTUF-3D.
 
 A comparison of modelled $T_{can}$ from scenarios GeorgeValidation and GippValidation to the observed $T_{a}$ of George St. four treed canopy stations and Gipps St. three open canopy stations is shown in Figure \ref{fig:GeorgeGippsStTcanCompare}. These air temperature values were aggregated into hourly averages over the evaluation period. A direct comparison of these two data sets is difficult as the modelled $T_{can}$ values are averages of the entire urban canopy air space while the seven observation stations record the air temperatures at 3.5 to 4m height for each specific location. The modelled $T_{can}$ of the open canopy street (Gipps St.) shows peak values approximately 1\SI{}{\degreeCelsius} warmer (as well as being overall warmer throughout daylight hours) than the treed street (George St.). Due to the difficulty in exact comparisons between averaged modelled street canyon air temperature and the point locations of the observations within the street canyon, the model over-estimates the air temperatures of each canyon as well as the relative difference between the two (2\SI{}{\degreeCelsius} modelled vs. 1\SI{}{\degreeCelsius} in the observations). However, the result does show that VTUF-3D can capture some of the relative cooling effects of increased canopy cover in air temperature predictions as seen in the \cite{Coutts2015} observations.
 
@@ -704,7 +710,7 @@ An extensive evaluation process has shown that VTUF-3D is able to accurately mod
 Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to
 model and study in detail the impacts of urban greening on HTC and provide recommendations and guidelines on how to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to provide maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and understanding how current urban design will respond to changing urban climate conditions.
 
-With VTUF-3D's micro-climate resolution, urban areas can be studied in great detail and proper mitigation strategies designed for every section of the urban canyon, allowing effort to be focused on areas with the greatest need. VTUF-3D is sufficiently scaled to resolve human level interactions with their surroundings and provide variables to calculate HTC (such as T$_{mrt}$). The built in output of T$_{mrt}$ and UTCI allows examination of these values without requiring addition steps. Finally, with the ability to insert any type of vegetation using physiological and physical vegetation templates, VTUF-3D is applicable to an vast number of scenarios and modelling questions. This new model will allow research into a wide variety of urban morphologies, quantifying the benefits of a wide variety of urban arrangements and allow planning for future changes and challenges in climate and urban design.
+With VTUF-3D's micro-climate resolution, urban areas can be studied in great detail and proper mitigation strategies designed for every section of the urban canyon, allowing effort to be focused on areas with the greatest need. VTUF-3D is sufficiently scaled to resolve human level interactions with their surroundings and provide variables to calculate HTC (such as T$_{mrt}$). The built in output of T$_{mrt}$ and UTCI allows examination of these values without requiring additional steps. Finally, with the ability to insert any type of vegetation using physiological and physical vegetation templates, VTUF-3D is applicable to an vast number of scenarios and modelling questions. This new model will allow research into a wide variety of urban morphologies, quantifying the benefits of a wide variety of urban arrangements and allow planning for future changes and challenges in climate and urban design.
 
 However, the creation and evaluation of VTUF-3D is only a first step. As the intended end users of the knowledge gained through VTUF-3D, planners and policy makers often lack the time, expertise, and scientific rigour needed to generate and interpret climate model output \citep{Elasson2000,Moser2014,Winkler2011}, work will need to be done with VTUF-3D to systematically analyse a wide variety of scenarios seeking optimal uses of urban vegetation for HTC and to summarise these findings. A forthcoming paper will start this process with an examination of varying urban canopy cover on HTC in street canyons using VTUF-3D. VTUF-3D has also been adopted by the CRC for Water Sensitive Cities as their micro-climate tool to evaluate climatic impacts of WSUD, with those findings disseminated to industry partners and the public at large. Finally, work is under way to provide a simpler user interface to VTUF-3D, allowing a wider adoption beyond the current academic research user-base.
 
