--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -690,7 +690,7 @@ Modelled results of $T_{mrt}$ and UTCI in George St. the treed canyon, follow si
 
 A statistical analysis of predicted vs. observed results is presented in Table \ref{tab:georgetmrt}. Results of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon (George St.) show values of 0.91 to 0.93 while the open Gipps St. canyon shows superior performance in the range of 0.95 and 0.96 for $T_{mrt}$ and 0.95 to 0.97 for UTCI. Other statistics (RMSE, MBE, and MAE) also show this pattern of good performance within the open canyon compared to reduced performance in the treed canyon.
 
-These wider divergences of modelled results from observed values within the treed canyon suggests a number of possible limitations of this study and of the VTUF-3D model. The first is of the evaluation process. High quality, high resolution observations of $T_{mrt}$ and UTCI in urban areas, particularly underneath a dense canopy, are difficult to make, and very few datasets are widely available for model evaluations. The small number of observed locations available within this evaluation led to difficulty in matching the precise position of the observation sensors (and the precise amounts of rapidly fluctuating illumination on the black globe sensors) to the more detailed resolution of the modelled results. The divergences also suggest some limitations of VTUF-3D when modelling dense vegetation. This can result from the challenges of designing an exact detailed representation of the observed area within the modelled domain using a 5m resolution, as small differences in timing can lead to large differences in the comparisons.. It also suggests further work is needed to improve the physical representation of the vegetated canopy in the next version of VTUF-3D.
+These wider divergences of modelled results from observed values within the treed canyon suggests a number of possible limitations of this study and of the VTUF-3D model. The first is of the evaluation process. High quality, high resolution observations of $T_{mrt}$ and UTCI in urban areas, particularly underneath a dense canopy, are difficult to make, and very few datasets are widely available for model evaluations. The small number of observed locations available within this evaluation led to difficulty in matching the precise position of the observation sensors (and the precise amounts of rapidly fluctuating illumination on the black globe sensors) to the more detailed resolution of the modelled results. The divergences also suggest some limitations of VTUF-3D when modelling dense vegetation. This can result from the challenges of designing an exact detailed representation of the observed area within the modelled domain using a 5m resolution, as small differences in timing can lead to large differences in the comparisons. It also suggests further work is needed to improve the detail of the physical representation of the vegetated canopy in the next version of VTUF-3D.
 
 A comparison of modelled $T_{can}$ from scenarios GeorgeValidation and GippValidation to the observed $T_{a}$ of George St. four treed canopy stations and Gipps St. three open canopy stations is shown in Figure \ref{fig:GeorgeGippsStTcanCompare}. These air temperature values were aggregated into hourly averages over the evaluation period. A direct comparison of these two data sets is difficult as the modelled $T_{can}$ values are averages of the entire urban canopy air space while the seven observation stations record the air temperatures at 3.5 to 4m height for each specific location. The modelled $T_{can}$ of the open canopy street (Gipps St.) shows peak values approximately 1\SI{}{\degreeCelsius} warmer (as well as being overall warmer throughout daylight hours) than the treed street (George St.). Due to the difficulty in exact comparisons between averaged modelled street canyon air temperature and the point locations of the observations within the street canyon, the model over-estimates the air temperatures of each canyon as well as the relative difference between the two (2\SI{}{\degreeCelsius} modelled vs. 1\SI{}{\degreeCelsius} in the observations). However, the result does show that VTUF-3D can capture some of the relative cooling effects of increased canopy cover in air temperature predictions as seen in the \cite{Coutts2015} observations.
 
@@ -705,7 +705,9 @@ This study presents the development of a new model, VTUF-3D, that is able to mod
 
 VTUF-3D is a unique model involving an innovative tiling approach that accounts for the detailed physiological processes of vegetation. The model incorporates a templated scalable configuration system, used to represent specific types of vegetation, allowing any variety and mix of vegetation to be added to a modelled domain. Also, differential shading functionality allows impacts of urban geometry and inter-tree shading on vegetation anywhere in an urban canyon to be properly modelled. Finally, the addition of mean radiant temperature and UTCI output for all surfaces allows detailed analysis of the impact of vegetation on these important parameters influencing HTC in these areas.
 
-An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). VTUF-3D has shown significant improvement over the unimproved (non-vegetated) TUF-3D model. VTUF-3D performs well within the range of other types of land surface schemes. The strong advantage of VTUF-3D is that it is able to perform with this level of accuracy at a micro-scale. In reproducing diurnal trends of $T_{mrt}$, VTUF-3D is able to reproduce the overall trends well, except is slightly slow to warm during the mornings. In the treed canyon of George St., where wide variations between the observation stations are seen in the observations, VTUF-3D is able to reproduce much of those variations, though not the entire range. These two comprehensive evaluations demonstrate that VTUF-3D is suitable to assess the impacts of urban greenery on human thermal comfort.
+An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). VTUF-3D has shown significant improvement over the unimproved (non-vegetated) TUF-3D model. VTUF-3D performs well within the range of other types of land surface schemes. The strong advantage of VTUF-3D is that it is able to perform with this level of accuracy at a micro-scale. In reproducing diurnal trends of $T_{mrt}$, VTUF-3D is able to reproduce the overall trends well, except is slightly slow to warm during the mornings. In the treed canyon of George St., where wide variations between the observation stations are seen in the observations, VTUF-3D is able to reproduce much of those variations, though not the entire range. 
+
+A key design goal of VTUF-3D was to simplify the approach, maximising the efficiency and accessibility of the model for a wide audience, yet be accurate enough for these users to start investigating the impacts of urban greening. This trade-off leads to some potential limitations. The offline aspects of the model means that some interactions and exchanges are not accounted for in the model. Future development plans include an option to couple VTUF-3D with a mesoscale atmospheric model (an online approach), however until then, evolving interactions and feedback between the boundary layer and the urban canyon are not captured. In the George St. evaluation, the forcing data used, observations from within the canyon, can lead to reduced accuracy. However, this highlights the relative levels of accuracy that can still be obtained using this source of easily obtained forcing data. Finally, not accounting for longwave exchanges between urban vegetation and the urban canyon due to the offline vegetation modelling is another potential limitations of the model. Future model development to bring the vegetation online into the model will eliminate this limitation.
 
 Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to
 model and study in detail the impacts of urban greening on HTC and provide recommendations and guidelines on how to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to provide maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and understanding how current urban design will respond to changing urban climate conditions.
