Added in Nigel's suggestions

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -688,7 +688,7 @@ There are a number of differences in the way $T_{g}$ (and its use in calculating
 
 Modelled results of $T_{mrt}$ and UTCI in George St. the treed canyon, follow similar patterns to Gipps St. The observations show wide variations between the observation locations due to the intermittent shading effect through a denser canopy as the sun moves across the sky. The modelled results also show wide variations between the locations but do not reproduce as wide a range as the observations. Additionally, differences can be seen in timing of periods of shading and illumination compared to the observations. 
 
-A statistical analysis of predicted vs. observed results is presented in Table \ref{tab:georgetmrt}. Results of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon (George St.) show values of 0.91 to 0.93 while the open Gipps St. canyon shows superior performance in the range of 0.95 and 0.96 for $T_{mrt}$ and 0.95 to 0.97 for UTCI. Other statistics (RMSE, MBE, and MAE) also show this pattern of good performance within the open canyon compared to reduced performance in the treed canyon.
+A statistical analysis of predicted vs. observed results is presented in Table \ref{tab:georgetmrt}. Results of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon (George St.) show values of 0.91 to 0.93 while the open Gipps St. canyon shows superior performance in the range of 0.95 to 0.96 for $T_{mrt}$ and 0.95 to 0.97 for UTCI. Other statistics (RMSE, MBE, and MAE) also show this pattern of good performance within the open canyon compared to reduced performance in the treed canyon.
 
 These wider divergences of modelled results from observed values within the treed canyon suggests a number of possible limitations of this study and of the VTUF-3D model. The first is of the evaluation process. High quality, high resolution observations of $T_{mrt}$ and UTCI in urban areas, particularly underneath a dense canopy, are difficult to make, and very few datasets are widely available for model evaluations. The small number of observed locations available within this evaluation led to difficulty in matching the precise position of the observation sensors (and the precise amounts of rapidly fluctuating illumination on the black globe sensors) to the more detailed resolution of the modelled results. The divergences also suggest some limitations of VTUF-3D when modelling dense vegetation. This can result from the challenges of designing an exact detailed representation of the observed area within the modelled domain using a 5m resolution, as small differences in timing can lead to large differences in the comparisons. It also suggests further work is needed to improve the detail of the physical representation of the vegetated canopy in the next version of VTUF-3D.
 
@@ -707,7 +707,7 @@ VTUF-3D is a unique model involving an innovative tiling approach that accounts 
 
 An extensive evaluation process has shown that VTUF-3D is able to accurately model urban areas (including urban vegetation). VTUF-3D has shown significant improvement over the unimproved (non-vegetated) TUF-3D model. VTUF-3D performs well within the range of other types of land surface schemes. The strong advantage of VTUF-3D is that it is able to perform with this level of accuracy at a micro-scale. In reproducing diurnal trends of $T_{mrt}$, VTUF-3D is able to reproduce the overall trends well, except is slightly slow to warm during the mornings. In the treed canyon of George St., where wide variations between the observation stations are seen in the observations, VTUF-3D is able to reproduce much of those variations, though not the entire range. 
 
-A key design goal of VTUF-3D was to simplify the approach, maximising the efficiency and accessibility of the model for a wide audience, yet be accurate enough for these users to start investigating the impacts of urban greening. This trade-off leads to some potential limitations. The offline aspects of the model means that some interactions and exchanges are not accounted for in the model. Future development plans include an option to couple VTUF-3D with a mesoscale atmospheric model (an online approach), however until then, evolving interactions and feedback between the boundary layer and the urban canyon are not captured. In the George St. evaluation, the forcing data used, observations from within the canyon, can lead to reduced accuracy. However, this highlights the relative levels of accuracy that can still be obtained using this source of easily obtained forcing data. Finally, not accounting for longwave exchanges between urban vegetation and the urban canyon due to the offline vegetation modelling is another potential limitations of the model. Future model development to bring the vegetation online into the model will eliminate this limitation.
+A key design goal of VTUF-3D was to simplify the approach, maximising the efficiency and accessibility of the model for a wide audience, yet be accurate enough for these users to start investigating the impacts of urban greening. This trade-off leads to some potential limitations. The offline aspects of the model means that some interactions and exchanges are not accounted for in the model. Future development plans include an option to couple VTUF-3D with a mesoscale atmospheric model (an online approach), but until then, evolving interactions and feedback between the boundary layer and the urban canyon are not captured. In the George St. evaluation, the forcing data used, observations from within the canyon, can lead to reduced accuracy. However, this highlights the relative levels of accuracy that can still be obtained using this source of easily obtained forcing data. Finally, not accounting for longwave exchanges between urban vegetation and the urban canyon due to the offline vegetation modelling is a further limitations of the current model. Future model development to bring the vegetation online into the model will eliminate this problem.
 
 Now, with the completion and evaluation of the VTUF-3D v1.0 model, there is a suitable tool to
 model and study in detail the impacts of urban greening on HTC and provide recommendations and guidelines on how to best use urban greenery to reduce urban temperatures. Questions can be answered as to the optimal arrangement of canopy cover to provide maximum benefits. Performance of future scenarios can also help inform responses to future challenges, both in terms of urban redesign and understanding how current urban design will respond to changing urban climate conditions.
