Last final changes before resubmitting.

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -107,7 +107,7 @@
 
 \begin{abstract}
 
-With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets) has been developed. In it, offline modelling of individual items of vegetation is performed using the MAESPA process-based tree model \citep{Duursma2012} (a model that can model individual trees, vegetation, and soil components), and integrated into the TUF-3D \citep{Krayenhoff2007} urban micro-climate surface energy balance model. This innovative approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across urban canyons. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first evaluation compares modelled surface energy balance fluxes to observations in Preston, Australia \citep{Coutts2007}. The second evaluation compares spatial and temporal predictions of $T_{mrt}$ and UTCI to two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment in support of HTC. 
+With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets) has been developed. In it, offline modelling of individual items of vegetation is performed using the MAESPA process-based tree model \citep{Duursma2012} (a model that can model individual trees, vegetation, and soil components), and integrated into the TUF-3D \citep{Krayenhoff2007} urban micro-climate surface energy balance (SEB) model. This innovative approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This work enables detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across urban canyons. This study presents an overview of VTUF-3D. Also presented are two evaluations of VTUF-3D. The first evaluation compares modelled surface energy balance fluxes to observations in Preston, Australia \citep{Coutts2007}. The second evaluation compares spatial and temporal predictions of $T_{mrt}$ and UTCI to two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model is shown to perform well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment in support of HTC. 
 
 %Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on conditions in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to deliver improvements in HTC and be used to generate best practice guidelines for urban greening in support of HTC.
 
